src/objects/GuestRoomStock__c.object
<CustomObject>
    <description>Guest Room Type Inventory day by day</description>
    <fields>
        <fullName>AGTChangeRoomsJSON__c</fullName>
        <description>Key: 取引先(リアルAGT)
Val: 調整残室数(リアルAGT)</description>
        <label>調整残室数JSON(リアルAGT)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagerKey__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>部屋タイプID_日付</inlineHelpText>
        <label>管理キー</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaxRoomsCal__c</fullName>
        <formula>IF ( ISBLANK(MaxSettingRooms__c) ||  ISNULL(MaxSettingRooms__c) 
,RoomTypeRef__r.MaxRooms__c, MaxSettingRooms__c)</formula>
        <label>販売室数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxSettingRooms__c</fullName>
        <label>設定販売室数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyOfStock__c</fullName>
        <label>在庫数</label>
        <precision>15</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemainingCount__c</fullName>
        <description>ブッキングAPIの「10. 在庫情報通知」利用</description>
        <formula>QtyOfStock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残室数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomTypeCodeCal__c</fullName>
        <description>ブッキングAPIの「10. 在庫情報通知」利用</description>
        <formula>RoomTypeRef__r.RoomTypeCode__c</formula>
        <label>部屋タイプコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeNameCal__c</fullName>
        <formula>RoomTypeRef__r.RoomTypeName__c</formula>
        <label>部屋タイプ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeRef__c</fullName>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>部屋在庫</relationshipLabel>
        <relationshipName>RoomType</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesStatusLst__c</fullName>
        <label>販売状態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SettingFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>個別設定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShopCodeCal__c</fullName>
        <formula>RoomTypeRef__r.ShopInfoRef__r.ShopCode__c</formula>
        <label>店舗コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockChangeDateCal__c</fullName>
        <description>ブッキングAPIの「10. 在庫情報通知」利用</description>
        <formula>TEXT(YEAR(StockDate__c)) &amp; if (len(TEXT(MONTH(StockDate__c))) = 1, &quot;0&quot;&amp;TEXT(MONTH(StockDate__c)), TEXT(MONTH(StockDate__c)))  &amp; if ( len(TEXT(DAY(StockDate__c))) = 1, &quot;0&quot;&amp;TEXT(DAY(StockDate__c)), TEXT(DAY(StockDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>調整日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockDate__c</fullName>
        <description>在庫管理日</description>
        <label>在庫日付</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>部屋在庫管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RoomTypeRef__c</columns>
        <columns>QtyOfStock__c</columns>
        <columns>StockDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>部屋在庫名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>